# qbz

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  flake.nix  index.html  package-lock.json  package.json  snapcraft.yaml
crates/qbz-app/: Cargo.toml
crates/qbz-app/src/: diagnostics.rs  graphics_detection.rs  lib.rs  playback_driver.rs  qconnect_identity.rs  runtime.rs  scrobble_timing.rs  session_store.rs
crates/qbz-app/src/offline_mode/: connectivity.rs  mod.rs  store.rs
crates/qbz-app/src/settings/: artist_blacklist.rs  bundle.rs  daemon_prefs.rs  developer.rs  discover_prefs.rs  download.rs  favorites.rs  favorites_cache.rs  graphics.rs  library.rs  local_favorites.rs  mod.rs  playback.rs  search_cache.rs  search_ranking.rs  search_service.rs  subscription.rs  tray.rs
crates/qbz-booklet/: Cargo.toml
crates/qbz-booklet/src/: lib.rs
crates/qbz-cache/: Cargo.toml
crates/qbz-cache/src/: image_cache.rs  lib.rs
crates/qbz-credentials/: Cargo.toml
crates/qbz-credentials/src/: lib.rs
crates/qbz-dac-wizard/: Cargo.toml
crates/qbz-dac-wizard/src/: lib.rs
crates/qbz-external-reco/: Cargo.toml
crates/qbz-external-reco/src/: cache.rs  carousels.rs  lib.rs  matching.rs  types.rs  validate.rs
crates/qbz-log/: Cargo.toml
crates/qbz-log/src/: bundle.rs  install.rs  lib.rs  line.rs  redact.rs  ring.rs  tee.rs
crates/qbz-lyrics/: Cargo.toml
crates/qbz-lyrics/src/: cache.rs  lib.rs  lrc.rs  model.rs  providers.rs  service.rs  sync.rs  wsync.rs
crates/qbz-media-controls/: Cargo.toml
crates/qbz-media-controls/src/: lib.rs  linux.rs  notify.rs  platform.rs  types.rs
crates/qbz-models/: Cargo.toml
crates/qbz-models/src/: lenient.rs  lib.rs  playback.rs  purchase_serde.rs  source.rs  types.rs
crates/qbz-music-link/: Cargo.toml
crates/qbz-music-link/src/: bridge.rs  detection.rs  errors.rs  fast_path.rs  lib.rs  odesli.rs  qobuz_search.rs
crates/qbz-playlist-import/: Cargo.toml
crates/qbz-playlist-import/src/: errors.rs  http.rs  importer.rs  lib.rs  match_qobuz.rs  sink.rs
crates/qbz-playlist-import/src/providers/: apple.rs  deezer.rs  mod.rs  spotify.rs  tidal.rs
crates/qbz-plex/: Cargo.toml
crates/qbz-plex/src/: lib.rs
crates/qbz-qobuz/: Cargo.toml
crates/qbz-qobuz/examples/: lyrics_probe.rs
crates/qbz-qobuz/src/: auth.rs  bundle.rs  client.rs  cmaf.rs  endpoints.rs  error.rs  lib.rs  lyrics.rs  offline_gate.rs  performers.rs  purchases.rs
crates/qbz-qobuz/tests/fixtures/: lyrics-doc-lsync-translation.json  lyrics-doc-plain-translation.json  lyrics-doc-plain.json  lyrics-doc-translation-only.json  lyrics-doc-wsync-translation.json  lyrics-doc-wsync.json  lyrics-miss-response.json  lyrics-url-response-translation.json  lyrics-url-response.json
crates/qbz-radio/: Cargo.toml
crates/qbz-radio/src/: builder.rs  lib.rs
crates/qbz-reco/: Cargo.toml
crates/qbz-reco/src/: builder.rs  lib.rs  store.rs  suggestions.rs
crates/qbz-slint/: Cargo.toml  build.rs
crates/qbz-slint-common/: Cargo.toml
crates/qbz-slint-common/src/: lib.rs  toast.rs
crates/qbz-slint/src/: adapter.rs  album.rs  album_map.rs  artist.rs  artist_releases.rs  artwork.rs  auth.rs  blacklist_manager.rs  booklet.rs  cast_service.rs  commands.rs  dac_wizard.rs  dates.rs  discover_browse.rs  discover_prefs.rs  fav_cache.rs  favorites.rs  favorites_prefs.rs  folders.rs  foryou.rs  genre_filter.rs  home.rs  immersive.rs  info_modals.rs  keybindings.rs  label.rs  library_db.rs  link_resolver.rs  local_library.rs  local_library_settings.rs  local_playlist.rs  locallibrary_prefs.rs  location_view.rs  lyrics.rs  lyrics_sync.rs  main.rs  mix.rs  musician.rs  myqbz.rs  myqbz_add.rs  (+37 more)
crates/qbz-slint/src/tray/: mod.rs
crates/qbz-slint/ui/: app.slint  state.slint
crates/qbz-slint/ui/album/: AlbumPageView.slint  LocalAlbumView.slint
crates/qbz-slint/ui/artist/: ArtistPageView.slint  ArtistReleasesView.slint  ReleaseGrid.slint
crates/qbz-slint/ui/award/: AwardAlbumsView.slint
crates/qbz-slint/ui/discover/: AlbumCard.slint  AlbumCollectionView.slint  ArtistCard.slint  ArtistCarousel.slint  Carousel.slint  DiscoverBrowseView.slint  DiscoverConfigModal.slint  ForYouView.slint  GenreFilterPopup.slint  GridSection.slint  HomeSkeleton.slint  HomeView.slint  PlaylistCard.slint  PlaylistCarousel.slint  PlaylistCollage.slint  RadioCard.slint  SectionRow.slint  SlimCarousel.slint  Spotlight.slint
crates/qbz-slint/ui/favorites/: FavoritesOfflineRail.slint  FavoritesView.slint
crates/qbz-slint/ui/foundation/: layout.slint  palette.slint  radius.slint  semantic-colors.slint  theme-state.slint  theme.slint  typography.slint
crates/qbz-slint/ui/immersive/: AlbumReactivePanel.slint  CoverflowPanel.slint  ImmersiveQueuePanel.slint  ImmersiveTrackInfoPanel.slint  ImmersiveView.slint  SpectrumPanel.slint
crates/qbz-slint/ui/label/: LabelPageView.slint  LabelReleasesView.slint
crates/qbz-slint/ui/locallibrary/: LocalLibraryView.slint
crates/qbz-slint/ui/location/: ArtistsByLocationView.slint
crates/qbz-slint/ui/login/: LoginScreen.slint
crates/qbz-slint/ui/mix/: MixView.slint
crates/qbz-slint/ui/musician/: MusicianPageView.slint
crates/qbz-slint/ui/myqbz/: AddToMixtapeModal.slint  CollectionsView.slint  CreateMyQbzModal.slint  DiscographyBuilderView.slint  MixtapeDetailView.slint  MixtapesView.slint  MyQbzEditModal.slint  MyQbzMixModal.slint  MyQbzShared.slint
crates/qbz-slint/ui/offline/: OfflineManagerView.slint
crates/qbz-slint/ui/playlist/: PlaylistManagerView.slint  (+1 more)
crates/qbz-text-utils/: Cargo.toml
crates/qbz-text-utils/src/: lib.rs  sleep.rs  strip_html.rs
crates/qbz-theme/: Cargo.toml
crates/qbz-theme/src/: color.rs  colors.rs  custom.rs  id.rs  lib.rs  registry.rs
crates/qbz-ui/: Cargo.toml  build.rs
crates/qbz-ui/src/: lib.rs
crates/qbz-ui/ui/: app.slint  focus-state.slint  state.slint
crates/qconnect-protocol/: Cargo.toml
crates/qconnect-protocol/src/: decoder.rs  event.rs  lib.rs  mapper.rs  queue_command_proto.rs  renderer.rs
crates/qconnect-transport-ws/: Cargo.toml
crates/qconnect-transport-ws/src/: config.rs  transport.rs
(+879 files in other folders)
