[package]
name = "qbz-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
qbz-models = { path = "../qbz-models" }
qbz-audio = { path = "../qbz-audio" }
qbz-player = { path = "../qbz-player" }
qbz-core = { path = "../qbz-core" }
qbz-qobuz = { path = "../qbz-qobuz" }
qbz-credentials = { path = "../qbz-credentials" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { workspace = true }
md-5 = { workspace = true }
base64 = { workspace = true }
rand = "0.10"
