[package]
name = "qbz-booklet"
version = "0.1.0"
edition = "2021"
description = "Album booklet (PDF) rasterization for QBZ — MuPDF page render to PNG (headless, frontend-agnostic)"
authors = ["blitzkriegfc"]

[dependencies]
log = { workspace = true }

# PDF rendering with MuPDF engine (high-quality rasterization for the booklet
# viewer). This stanza is a VERBATIM port of src-tauri/Cargo.toml — the Tauri
# booklet viewer was the proven, working build, and there were cross-distro
# rendering/build issues that the feature flags below fix. Do NOT "simplify".
#
# NOTE: On Linux, use sys-lib-* for zlib/harfbuzz/freetype to avoid symbol
# conflicts with GTK/GdkPixbuf. But NOT libjpeg — Ubuntu ships libjpeg8 while
# Debian/Fedora ship libjpeg62-turbo. Let mupdf vendor its own libjpeg to avoid
# cross-distro breakage (GitHub #161, #162).
# On macOS, let mupdf vendor everything (no GTK conflicts, and system libs
# don't support x86_64 cross-compilation from Apple Silicon).
mupdf = { version = "0.6", default-features = false, features = ["system-fonts"] }

[target.'cfg(target_os = "linux")'.dependencies]
mupdf = { version = "0.6", features = ["sys-lib-zlib", "sys-lib-harfbuzz", "sys-lib-freetype"] }
