[package]
name = "qbz-dac-wizard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HiFi/DAC setup wizard controller (Slint) — extracted feature crate."

[lib]
name = "qbz_dac_wizard"
path = "src/lib.rs"

[dependencies]
qbz-ui = { path = "../qbz-ui" }
qbz-audio = { path = "../qbz-audio" }
qbz-models = { path = "../qbz-models" }
qbz-i18n = { path = "../qbz-i18n" }
slint = { version = "=1.16.1", default-features = false, features = ["std", "compat-1-2"] }
