[package]
name = "qbz-models"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, events, and traits for QBZ music player"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Correct file:// URI building for media-controls art (ArtworkRef::to_mpris_url)
url = "2"
# Percent-encoding the Plex transcode `url=`/token params (plex_thumb_url),
# matching the Tauri frontend's buildPlexArtworkUrl. Same crate used across
# qbz-slint / qbz-media-controls / qbz-integrations.
urlencoding = "2"
