[package]
name = "qbz-playlist-import"
version = "0.1.0"
edition = "2021"
description = "Public-playlist import for QBZ — provider scrapers, Qobuz matcher, playlist creation (headless, frontend-agnostic)"
authors = ["blitzkriegfc"]

[dependencies]
# Shared QBZ crates (the real models + client, not src-tauri shims)
qbz-models = { path = "../qbz-models" }
qbz-qobuz = { path = "../qbz-qobuz" }

# HTTP (one shared client for all providers — see src/http.rs)
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Async runtime + concurrency
tokio = { workspace = true }
futures-util = { workspace = true }
