[package]
name = "qbz-qobuz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Qobuz API client for QBZ"

[dependencies]
qbz-models = { path = "../qbz-models" }
qbz-cmaf = { path = "../qbz-cmaf" }

# Async
tokio = { workspace = true }
futures-util = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto (for Qobuz auth)
md-5 = { workspace = true }
base64 = { workspace = true }

# Time
chrono = { workspace = true }

# Filesystem (bundle-token cache location)
dirs = "6"

# Regex
regex = { workspace = true }

# Logging
log = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
# Used only by examples/lyrics_probe.rs (read-only live probe of the lyrics
# endpoint): loads the saved OAuth token / credentials for login.
qbz-credentials = { path = "../qbz-credentials" }
