[package]
name = "qbz-radio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agnostic smart-radio pool builder for QBZ (ported from the Tauri radio_engine)"

[dependencies]
qbz-models = { path = "../qbz-models" }
qbz-qobuz = { path = "../qbz-qobuz" }

rusqlite = { version = "0.31", features = ["bundled"] }
log = { workspace = true }
dirs = "5"
