[package]
name = "qbz-slint-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Slint-coupled frontend helpers for the qbz app (toast; artwork primitives later)."

[dependencies]
qbz-ui = { path = "../qbz-ui" }
slint = { version = "=1.16.1", default-features = false, features = ["std", "compat-1-2"] }
