[package]
name = "qbz-slint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Slint functional MVP shell for QBZ (private branch only)"

[[bin]]
name = "qbz-slint"
path = "src/main.rs"

[dependencies]
# Skia renderer instead of the default femtovg — femtovg's text rendering
# looks coarse next to native Qt/KDE. default-features = false drops
# femtovg; std/accessibility/compat-1-2 are kept from the old default set,
# renderer-software stays as a cheap fallback if Skia fails to init.
slint = { version = "1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "renderer-software",
    "accessibility",
    "compat-1-2",
] }
log = { workspace = true }
env_logger = "0.11"
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
urlencoding = "2"
open = "5"
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
qbz-app = { path = "../qbz-app" }
qbz-audio = { path = "../qbz-audio" }
qbz-core = { path = "../qbz-core" }
qbz-models = { path = "../qbz-models" }
qbz-cache = { path = "../qbz-cache" }
qbz-credentials = { path = "../qbz-credentials" }

[build-dependencies]
slint-build = "1"
