[package]
name = "qbz-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Slint UI compilation unit for the qbz app — owns the .slint tree + bundled translations and exports the generated Rust types (AppWindow, MiniPlayerWindow, all globals + structs)."

[lib]
name = "qbz_ui"
path = "src/lib.rs"

[dependencies]
slint = { version = "=1.16.1", default-features = false, features = [
    "std",
    "compat-1-2",
    "renderer-software",
    "accessibility",
] }

[build-dependencies]
slint-build = "1.16"
