[package]
name = "qconnect-transport-ws"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket transport abstractions for Qobuz Connect"

[dependencies]
qconnect-protocol = { path = "../qconnect-protocol" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
prost = "0.13"
log = "0.4"
